# bid-iq

./: .env.local.example  .gitignore  AGENT_TEAM_GUIDE.md  AGENT_TEAM_STATUS.md  BIDIQ-MCP.md  CLAUDE.md  MICROSOFT_ADS_SETUP.md  README.md  batch-push-pdfs.ps1  build-compact-kb.js  bundle-kb.js  extract-all-pdfs.js  package-lock.json  package.json  pyproject.toml
api/: ask.py  models.py
app/: layout.tsx  page.tsx
audit/: 00-progress-journal.md  01-active-agent-map.md  02-dependency-graph.md  03-handoff-audit.md  04-circular-logic-scan.md  05-vercel-helper-health.md  06-stage-transition-anomalies.md  07-23-deactivated-inventory.md  08-ux-walkthrough.md  09-fix-plan.md  10-product-refresh-routing-design.md  99-end-of-shift.md
bidiq/: INGEST.md  cli.py  enrich.py  ingest.py  ingest_pillar3.py  web.py
data/: ali_lifts.json  catalog.db
docs/: PDF-STORAGE-SETUP.md  PRODUCTS_API.md  classifier-system-prompt-v1-DEPRECATED.md  classifier-system-prompt-v1.md  classifier-system-prompt-v2.1.md  classifier-system-prompt-v2.md  claude-code-brief-classifier-v2-swap.md  claude-code-brief-sort-report.md  claude-code-brief-wave1-ingest.md  schema-migration-multitag-brief.md
handoff/: PRODUCTS_API.md  README.md  current-catalog-snapshot.xlsx
kb_extracted/: operation-manuals.json
kb_output/: 100-42-F_Installation_Drawings.json  100-42-S_Installation_Drawings.json  100-48-F Installation Drawings.json  100-48-S_Installation_Drawings.json  36-28-F Installation Drawings.json  36-28-S Installation Drawings.json  38-26-F Installation Drawings.json  Parall-75-30-F.json  (+29 more)
lib/: db.ts  (+4 more)
(+301 files in other folders)
