[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bidiq"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40",
    "click>=8.0",
    "pdf2image>=1.16",
    "Pillow>=10.0",
    "psycopg[binary]>=3.1",
]

[tool.setuptools.packages.find]
include = ["bidiq*"]

[project.scripts]
bidiq = "bidiq.cli:main"
